set sonarcloud properties

--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,10 @@ bootJar {
 
 sonar {
     properties {
-        property "sonar.projectKey", "TODO"
-        property "sonar.organization", "TODO"
-        property "sonar.host.url", "TODO"
+        property "sonar.projectKey", "sopra-fs24-group-33_server"
+        property "sonar.projectName", "server"
+        property "sonar.organization", "sopra-fs24-group-33"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
 
